fixed letter spacing (still have to figure out width of cards)

--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -7,9 +7,10 @@
   font-size: 48px;
   font-weight: 600;
   line-height: 50px;
-  letter-spacing: -1.5%;
+  letter-spacing: -0.048px;
   text-align: left;
   text-transform: uppercase;
+  max-width: 335px;
 }
 .customers {
   color: rgb(87, 111, 53);
@@ -21,17 +22,21 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 18px;
-  letter-spacing: 0%;
+
   text-align: left;
+  max-width: 335px;
 }
 
 .reviews-card {
   margin-top: 40px;
 }
-.reviews-item {
+
+.reviews-list-content:nth-child(2) {
+  display: none;
 }
 
-.reviews-list {
+.reviews-list-content:nth-child(3) {
+  display: none;
 }
 
 .reviews-list-content {
@@ -44,7 +49,7 @@
   box-sizing: border-box;
   border: 1px solid rgba(122, 49, 69, 0.3);
   border-radius: 24px;
-
+  width: ((100% - 18px) / 2);
   background: rgb(251, 251, 251);
 }
 .reviews-photo {
@@ -56,7 +61,7 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
-  letter-spacing: -2%;
+  letter-spacing: -0.032px;
   text-align: center;
   margin-bottom: 8px;
 }
@@ -66,13 +71,23 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 18px;
-  letter-spacing: 0%;
+
   text-align: center;
 }
+
+/* !---------------- MEDIA TABLET --------------------- */
 
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+  }
+
+  .reviews-logo {
+    max-width: 553px;
+  }
+
+  .reviews-text {
+    max-width: 553px;
   }
 
   .reviews-list-content {
@@ -83,10 +98,32 @@
     display: flex;
     gap: 18px;
   }
+
+  .reviews-list-content:nth-child(2) {
+    display: flex;
+  }
+
+  .reviews-list-content:nth-child(3) {
+    display: none;
+  }
 }
+
+/* !---------------- MEDIA DESKTOP --------------------- */
 
 @media screen and (min-width: 1280px) {
   .container {
     width: 1280px;
+  }
+
+  .reviews-list-content {
+    width: calc((100% - 38px) / 3);
+  }
+
+  .reviews-list-content:nth-child(2) {
+    display: flex;
+  }
+
+  .reviews-list-content:nth-child(3) {
+    display: flex;
   }
 }
